# FM-Fork-ghidra-version-manager

./: .gitignore  Changelog.md  GVM_GUI.bat  ISSUES.md  README.md  pyproject.toml
.claude/: settings.local.json
extensions-repo/: arch-4004.toml  arch-allegrex.toml  arch-alpha.toml  arch-amiga.toml  arch-c166.toml  arch-csky.toml  arch-efi.toml  arch-hexagon.toml  arch-irisc.toml  arch-m16c.toml  arch-mcore.toml  arch-nanomips.toml  arch-niosii.toml  arch-pdk.toml  arch-picoblaze.toml  arch-rl78.toml  arch-rx.toml  arch-score7.toml  arch-stm8.toml  exporter-binexport.toml  exporter-delinker.toml  loader-dtb.toml  loader-ntr.toml  loader-xbe.toml  local-cert-kaiju.toml  local-consolepatchscripts.toml  local-ghidra-fidb-repo-20200530.toml  local-ghidra-rest-api.toml  local-ghidracord.toml  local-ghidraemu.toml  local-ghidraextendedsourceparser.toml  local-ghidrafindcrypt.toml  local-ghidralookup.toml  local-ghidramcp.toml  local-ghidrassist.toml  local-ghidrassistmcp.toml  local-ghidraxenon.toml  local-gsync.toml  local-gx64sync-master.toml  local-kingaidra.toml  (+9 more)
ghidra_version_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
gvm/: __main__.py  cache.py  extensions.py  ghidra_props_parser.py  gui.py  install.py  main.py
gvm/prefs_backup/: __init__.py  backup_generator.py  backup_restorer.py  gvm_config.py
