[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ghidra-version-manager"
version = "0.7.1"
description = "Ghidra Version Manager"
license = {text = "GPL-3.0-only"}
authors = [{name = "CUB3D", email = "callumthom11@gmail.com"}]
readme = "README.md"
homepage = "https://github.com/CUB3D/ghidra-version-manager"
repository = "https://github.com/CUB3D/ghidra-version-manager"
keywords = ["ghidra"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "tqdm>=4.67",
    "tomli-w>=1.1",
    "pillow>=11.0",
]

[project.optional-dependencies]
notifications = ["plyer>=2.1"]

[project.scripts]
gvm = "gvm.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gvm*"]

[tool.setuptools.package-data]
gvm = ["py.typed"]
