[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra-version-manager"
version = "0.1"
description = "Ghidra Version Manager - Python conversion"
license = {text = "GPL-3.0-only"}
original author = [{name = "CUB3D", email = "callumthom11@gmail.com"}]
author = [{name = "Fublah-Man", email = "fublahman@gmail.com"}]
readme = "README.md"
keywords = ["ghidra"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "tqdm>=4.67",
    "tomli-w>=1.1",
    "pillow>=11.0",
]

[project.optional-dependencies]
notifications = ["plyer>=2.1"]

[project.scripts]
gvm = "gvm.main:main"

[project.urls]
Python Repository = "https://github.com/Fublah-Man/FM-Fork-ghidra-version-manager"
Rust Repository = "https://github.com/CUB3D/ghidra-version-manager"

[tool.setuptools.packages.find]
where = ["."]
include = ["gvm*"]

[tool.setuptools.package-data]
gvm = ["py.typed"]
