[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra-version-manager"
version = "0.3"
description = "Ghidra Version Manager - Python conversion"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Fublah-Man", email = "fublahman@gmail.com"},
    {name = "CUB3D", email = "callumthom11@gmail.com"},
]
readme = "README.md"
keywords = ["ghidra"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "tqdm>=4.67",
    "tomli-w>=1.1",
    "pillow>=11.0",
]

[project.optional-dependencies]
notifications = ["plyer>=2.1"]
gui = ["customtkinter>=5.2"]

[project.scripts]
gvm = "gvm.main:main"

[project.gui-scripts]
gvm-gui = "gvm.gui:launch_gui"

[project.urls]
Python_Repository = "https://github.com/Fublah-Man/FM-Fork-ghidra-version-manager"
Rust_Repository = "https://github.com/CUB3D/ghidra-version-manager"

[tool.setuptools.packages.find]
where = ["."]
include = ["gvm*"]

[tool.setuptools.package-data]
gvm = ["py.typed"]
